--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
 	"type": "module",
 	"scripts": {
 		"dev": "vite --open",
-		"build": "vite build",
+		"build": "tsc && vite build",
 		"lint": "eslint .",
 		"preview": "vite preview"
 	},
 	"dependencies": {
+		"@types/react-modal": "^3.16.3",
 		"axios": "^1.7.7",
 		"formik": "^2.4.6",
 		"react": "^18.3.1",
@@ -17,18 +18,19 @@
 		"react-hot-toast": "^2.4.1",
 		"react-icons": "^5.3.0",
 		"react-loader-spinner": "^6.1.6",
-		"react-modal": "^3.16.1"
+		"react-modal": "^3.16.3"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.13.0",
-		"@types/react": "^18.3.12",
-		"@types/react-dom": "^18.3.1",
+		"@types/react": "^18.3.18",
+		"@types/react-dom": "^18.3.5",
 		"@vitejs/plugin-react-swc": "^3.5.0",
 		"eslint": "^9.13.0",
 		"eslint-plugin-react": "^7.37.2",
 		"eslint-plugin-react-hooks": "^5.0.0",
 		"eslint-plugin-react-refresh": "^0.4.14",
 		"globals": "^15.11.0",
+		"typescript": "^5.7.2",
 		"vite": "^5.4.10"
 	}
 }
